# sph-sdk

./: .all-contributorsrc  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: cmake.yml  python-package.yml
algorithms/: CMakeLists.txt
algorithms/benchmark/: box_search.py  brute_force.py  bruteforce.py  dist_sqr.py  dist_sqr_test.py  find_cube.py  neighbors_search_algorithms.py  neighbors_search_algorithms_test.py
algorithms/include/: NeighboursSearch.hpp
algorithms/src/: Area.cpp  Area.h  Defines.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesConfig.h  NeighboursSearch.h  NeighboursSearch.hpp  Point.h  Point.hpp  ROperations.cpp  ROperations.h  ROperations.hpp  Shapes.h
algorithms/src/marching-cubes/: Main.cpp  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesConfig.h
algorithms/test/: CMakeLists.txt
algorithms/test/benchmark/: box_search.py  box_search_find_neighbor_boxes_test.py  box_search_test.py  bruteforce.py  hash_table_search.py  hash_table_search_test.py  neighbors_search_algorithms_test.py
algorithms/test/src/: AreaTestSuite.cpp  AreaTestSuite.h  MainTest.cpp  MarchingCubesTestSuite.cpp  MarchingCubesTestSuite.h  NeighboursSearchTestSuite.cpp  NeighboursSearchTestSuite.h  ROperationsTestSuite.cpp  ROperationsTestSuite.h  VolumeTestSuite.cpp  VolumeTestSuite.h
cmake/Modules/: FindBuildGLFW.cmake  FindFreeGlutBuild.cmake  FindGLFW3.cmake
demo/: CMakeLists.txt
demo/src/: Draw.cpp  Draw.h  Shapes.h  main.cpp
sph/: CMakeLists.txt
sph/include/: Collisions.h  Config.h  Forces.h  Integrator.h  Particle.h  SPH.h
sph/src/: Collisions.cpp  Collisions.h  Config.cpp  Config.h  Forces.cpp  Forces.h  Integrator.cpp  Integrator.h  Particle.cpp  Particle.h  SPH.cpp  SPH.h
sph/test/: CMakeLists.txt
sph/test/src/: CollisionsTestSuite.cpp  CollisionsTestSuite.h  ForcesTestSuite.cpp  ForcesTestSuite.h  IntegratorTestSuite.cpp  IntegratorTestSuite.h  MainTest.cpp  ParticleTestSuite.cpp  ParticleTestSuite.h
